1.10.3
* Tools/balio: Some improvements around blockchair.com and blockcypher.com API
* Tools/balio: Fixed balance fetching for Litecoin
* Lib: New functions (btc.Tx).ContainsOrdFile() and btc.ExtractOrdFile() - for files stored in txs, as per github.com/casey/ord
* Tools/bdb - new command "-ord" to extract above mentioned files from the blockchain
* Client/WebUI: The fees chart for an already mined block shows the cross with reference to x and y axis
* Client/WebUI/Home: Fixed blocks SPB values on the chart, as the ones showed previously were not accurate
* Client/WebUI/Home: Added blocks Weight chart
* Client/WebUI/Miners: Shows version data only for the recent blocks (as BIP9 has not been used for awhile)
* Client: Fixed how the average TX fee is caluclated over "CFG.Stat.FeesBlks" (it was showing too low values)
* Client: Don't send "getmp" messages if Mempool is more than half full
* Tools/bdb - new command "-compress" to compress a "bl*.dat" file (after running node without "CFG.Memory.CompressBlockDB")
* Client/TextUI: new command "usd" - tries to figure out curent BTC/USD price, using UTXOracle method
* Client/WebUI: some improvements to the block fees chart (in Home and Blocks tab)
* Client/TextUI: some code cleanup
* Tools: each tool moved it its own sub-directory (IDE-s did not like multiple main-s in same folder)

1.10.2 - 2022-09-06:
* Client: New config value "Memory.CompressBlockDB" (default true)
* Client: New config value "UTXOSave.CompressRecords" (default false)
* Tools: utxo_compress and utxo_decompress have been fixed
* Wallet: "bip39" switch can now have value of "-1", in which case the seed password will be treated as mnemonic
* Wallet: New commands "-encrypt" and "-decrypt", for encrypting and decrypting files with wallet's seed (password)
* Client: fixed a bug that could cause chain sync to abort with series of "bad-txnmrklroot" errors