@@ -396,72 +396,3 @@ func ScriptToText(p []byte) (out []string, e error) {
 	}
 	return
 }
-
-// ExtractOrdFile extracts the file (inscription) stored inside the segwit data
-// ... as per github.com/casey/ord
-//
-//	p  - is the segwith data returned by transaction's ContainsOrdFile()
-//
-// returns file type and the file itself
-func ExtractOrdFile(p []byte) (typ string, data []byte, e error) {
-	var opcode_idx int
-	var byte_idx int
-
-	for byte_idx < len(p) {
-		opcode, vchPushValue, n, er := GetOpcode(p[byte_idx:])
-		if er != nil {
-			e = errors.New("ExtractOrdinaryFile: " + er.Error())
-			return
-		}
-
-		byte_idx += n
-
-		switch opcode_idx {
-		case 0:
-			if len(vchPushValue) != 32 {
-				e = errors.New("opcode_idx 0: No push data 32 bytes")
-				return
-			}
-		case 1:
-			if opcode != OP_CHECKSIG {
-				e = errors.New("opcode_idx 1: OP_CHECKSIG missing")
-				return
-			}
-		case 2:
-			if opcode != OP_FALSE {
-				e = errors.New("opcode_idx 2: OP_FALSE missing")
-				return
-			}
-		case 3:
-			if opcode != OP_IF {
-				e = errors.New("opcode_idx 3: OP_IF missing")
-				return
-			}
-		case 4:
-			if len(vchPushValue) != 3 || string(vchPushValue) != "ord" {
-				e = errors.New("opcode_idx 4: missing ord string")
-				return
-			}
-		case 5:
-			if len(vchPushValue) != 1 || vchPushValue[0] != 1 {
-				//println("opcode_idx 5:", hex.EncodeToString(vchPushValue), string(vchPushValue), "-ignore")
-				opcode_idx-- // ignore this one
-			}
-		case 6:
-			typ = string(vchPushValue)
-		case 7:
-			if opcode != OP_FALSE {
-				e = errors.New("opcode_idx 7: OP_FALSE missing")
-				return
-			}
-		default:
-			if opcode == OP_ENDIF {
-				return
-			}
-			data = append(data, vchPushValue...)
-		}
-
-		opcode_idx++
-	}
-	return
-}
