@@ -824,28 +824,23 @@ func (t *Tx) SerializeNew() []byte {
 // ContainsOrdFile checks if there is a file (inscription) inside the transaction
 // ... as per github.com/casey/ord
 //
-//	quick - if set, will speed up the process assuming 1 input and 3 wintesses requirement
+//	quick - if set, will not return the scripts (for further decoding)
 //
-// return the segwit data with the encoded file (to be used with ExtractOrdFile())
-// or nil if the transaction does not contain a file
-func (tx *Tx) ContainsOrdFile(quick bool) []byte {
-	if quick {
-		// Only looks for txs with one input and 3 witnesses - then checks the 2nd witness...
-		if len(tx.SegWit) == 1 && len(tx.SegWit[0]) == 3 {
-			sw := tx.SegWit[0][1]
+// return true if inscription found
+// if quck was not set, also returns all the segwit scripts with the data
+// returns false, nil if the transaction does not contain any file
+func (tx *Tx) ContainsOrdFile(quick bool) (yes bool, res [][]byte) {
+	// Browses through all the Inputs and all the witnesses...
+	for _, inp := range tx.SegWit {
+		for _, sw := range inp {
 			if len(sw) > 40 && sw[0] == 0x20 && bytes.Equal(sw[34:40], []byte{0x00, 0x63, 0x03, 0x6f, 0x72, 0x64}) {
-				return sw
-			}
-		}
-	} else {
-		// Browses through all the Inputs and all the witnesses...
-		for _, inp := range tx.SegWit {
-			for _, sw := range inp {
-				if len(sw) > 40 && sw[0] == 0x20 && bytes.Equal(sw[34:40], []byte{0x00, 0x63, 0x03, 0x6f, 0x72, 0x64}) {
-					return sw
+				yes = true
+				if quick {
+					return
 				}
+				res = append(res, sw)
 			}
 		}
 	}
-	return nil
+	return
 }
