@@ -1,8 +1,7 @@
 1.10.3
 * Tools/balio: Some improvements around blockchair.com and blockcypher.com API
 * Tools/balio: Fixed balance fetching for Litecoin
-* Lib: New functions (btc.Tx).ContainsOrdFile() and btc.ExtractOrdFile() - for files stored in txs, as per github.com/casey/ord
-* Tools/bdb - new command "-ord" to extract above mentioned files from the blockchain
+* Lib: New function (btc.Tx).ContainsOrdFile(), as per github.com/casey/ord
 * Client/WebUI: The fees chart for an already mined block shows the cross with reference to x and y axis
 * Client/WebUI/Home: Fixed blocks SPB values on the chart, as the ones showed previously were not accurate
 * Client/WebUI/Home: Added blocks Weight chart
@@ -14,6 +13,8 @@
 * Client/WebUI: some improvements to the block fees chart (in Home and Blocks tab)
 * Client/TextUI: some code cleanup
 * Tools: each tool moved it its own sub-directory (IDE-s did not like multiple main-s in same folder)
+* Client/WebUI/Home: Shows the percetage occupancy of the ord inscriptions for each block
+* Tools/bdb - new command "-ord" to see ord inscriptions occupancy per block (use with "-ox" to extract the files)
 
 1.10.2 - 2022-09-06:
 * Client: New config value "Memory.CompressBlockDB" (default true)
